# Sim

./: .gitignore  .travis.yml  INSTALL  Makefile.am  README  Sim.cabal  configure.ac  libtool
doc/: IDEAS.md
src/: Main.hs  Makefile.am  Paths_Sim.hs  Tests.hs  Types.hs  callbacks.c  callbacks.h  game.c  game.h  main.c  sim  sim.glade
src/Sim/: AI.hs  Board.hs  Game.hs  Types.hs
tests/: Makefile.am
