name:                Sim
version:             0.1.0.0
synopsis:            A simple pencil game
homepage:            https://github.com/vikraman/Sim
license:             GPL-3
license-file:        LICENSE
category:            Game
build-type:          Simple
cabal-version:       >=1.8
data-files:          sim.glade

executable sim
  hs-source-dirs: src
  main-is: Main.hs
  build-depends: base == 4.*
               , mtl
               , gtk